--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-webview": "13.13.5",
     "uuid": "^11.1.0",
     "expo-file-system": "~18.1.10",
-    "expo-media-library": "~17.1.7"
+    "expo-media-library": "~17.1.7",
+    "expo-updates": "~0.28.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
