--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "@react-navigation/native-stack": "^7.3.14",
     "@supabase/supabase-js": "^2.50.0",
     "expo": "~53.0.11",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.8",
     "expo-constants": "~17.1.6",
+    "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-linking": "~7.1.5",
     "expo-location": "~18.1.5",
+    "expo-media-library": "~17.1.7",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
@@ -47,10 +48,7 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "uuid": "^11.1.0",
-    "expo-file-system": "~18.1.10",
-    "expo-media-library": "~17.1.7",
-    "expo-updates": "~0.28.14"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
